Project

General

Profile

Actions

Bug #19250

closed

bluefs: missing flush_bdev in fsync path

Added by Sage Weil about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if we don't flush the bluefs log, fsync doesn't flush_bdev.


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #19327: kraken: bluefs: missing flush_bdev in fsync pathResolvedNathan CutlerActions
Actions #1

Updated by Sage Weil about 7 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19327: kraken: bluefs: missing flush_bdev in fsync path added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF